@@ -8,7 +8,7 @@
 		<string key="IBDocument.HIToolboxVersion">353.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="77"/>
+			<integer value="2"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -89,7 +89,7 @@
 									<object class="IBUISegmentedControl" id="860329424">
 										<reference key="NSNextResponder" ref="875926964"/>
 										<int key="NSvFlags">1316</int>
-										<string key="NSFrame">{{12, 7}, {170, 30}}</string>
+										<string key="NSFrame">{{12, 7}, {147, 30}}</string>
 										<reference key="NSSuperview" ref="875926964"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -130,21 +130,23 @@
 									<object class="IBUISegmentedControl" id="273376343">
 										<reference key="NSNextResponder" ref="875926964"/>
 										<int key="NSvFlags">1316</int>
-										<string key="NSFrame">{{203, 7}, {105, 30}}</string>
+										<string key="NSFrame">{{177, 7}, {131, 30}}</string>
 										<reference key="NSSuperview" ref="875926964"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 										<int key="IBUITag">1</int>
 										<int key="IBSegmentControlStyle">2</int>
-										<int key="IBNumberOfSegments">2</int>
+										<int key="IBNumberOfSegments">3</int>
 										<int key="IBSelectedSegmentIndex">0</int>
 										<object class="NSArray" key="IBSegmentTitles">
 											<bool key="EncodedWithXMLCoder">YES</bool>
-											<string>World</string>
+											<string>All</string>
 											<string>Country</string>
+											<string>Device</string>
 										</object>
 										<object class="NSMutableArray" key="IBSegmentWidths">
 											<bool key="EncodedWithXMLCoder">YES</bool>
+											<real value="0.000000e+00"/>
 											<real value="0.000000e+00"/>
 											<real value="0.000000e+00"/>
 										</object>
@@ -152,14 +154,17 @@
 											<bool key="EncodedWithXMLCoder">YES</bool>
 											<reference ref="5"/>
 											<reference ref="5"/>
+											<reference ref="5"/>
 										</object>
 										<object class="NSMutableArray" key="IBSegmentContentOffsets">
 											<bool key="EncodedWithXMLCoder">YES</bool>
 											<string>{0, 0}</string>
 											<string>{0, 0}</string>
+											<string>{0, 0}</string>
 										</object>
 										<object class="NSMutableArray" key="IBSegmentImages">
 											<bool key="EncodedWithXMLCoder">YES</bool>
+											<reference ref="4"/>
 											<reference ref="4"/>
 											<reference ref="4"/>
 										</object>
@@ -370,9 +375,9 @@
 						<reference key="object" ref="875926964"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="572835409"/>
 							<reference ref="316166655"/>
 							<reference ref="392872089"/>
+							<reference ref="572835409"/>
 						</object>
 						<reference key="parent" ref="211904977"/>
 					</object>
@@ -454,7 +459,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 						</object>
 					</object>
-					<string>{{99, 265}, {320, 480}}</string>
+					<string>{{188, 176}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<integer value="1"/>
 					<string>AppController</string>
@@ -503,6 +508,14 @@
 					<string key="superclassName">NSObject</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">experimental/StreakTest.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">AppController</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">external/Chipmunk/Demo/main.h</string>
 					</object>
 				</object>
@@ -536,6 +549,22 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">tests/EaseDemo.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">AppController</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">tests/EffectsAdvancedTest.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">AppController</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">tests/EffectsTest.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -624,6 +653,35 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">tests/TransitionsDemo.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">AppController</string>
+					<string key="superclassName">NSObject</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">segmentAction:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSMutableArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>mainView</string>
+							<string>myNavigation</string>
+							<string>myTableView</string>
+							<string>window</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>UIView</string>
+							<string>UINavigationBar</string>
+							<string>UITableView</string>
+							<string>UIWindow</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">tests/attachDemo/attachDemo.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
